<resources>
    <string name="app_name">Plucky</string>
    //Pagina de Carregamento
    <string name="logo">(Logo!)</string>
    <string name="proxima">proxima</string>
    <string name="descricao_logo">Logo do jogo</string>
    <string name="descricao_proxima">Ir para a Pagina Principal</string>


    //Card Inserir Nome do Jogador
    <string name="pergunta_nome">Qual seu Nome?</string>
    <string name="pergunta_nome_dois">Revele sua identidade secreta.</string>
    <string name="nome">Nome</string>

    //Botões
    <string name="ok">OK</string>
    <string name="batalha">Batalha</string>
    <string name="conectar">Conectar</string>
    <string name="voltar">Voltar</string>
    <string name="descricao_voltar">Voltar para a pagina principal</string>
    <string name="pronto">Pronto</string>
    <string name="pausa">Pausar</string>
    <string name="desistir">Desistir</string>
    <string name="continuar">Continuar</string>

    //Pagina Principal
    <string name="personagem">Personagem</string>
    <string name="jogador">Anônimo</string>
    <string name="nivel">Nível 1</string>
    <string name="pontuacao">Pontos:</string>
    <string name="pontos_tres">0</string>
    <string name="trocar">Ver mais</string>
    <string name="descricao_batalha">Ir para a página de batalha</string>
    <string name="descricao_info">Informaçoes de como jogar</string>
    <string name="descricao_barra_nivel">Barra de exibição dos niveis</string>
    <string name="descricao_estrela">Estrela de níveis</string>

    //Pagina de Niveis
    <string name="pontos_faltando">Faltam 100 para o próximo nível</string>
    <string name="jogador_um">Adversário</string>
    <string name="jogador_dois">Nome</string>
    <string name="vs">vs</string>
    //peimeiro jogador
    <string name="pontos_partida_um">20 pontos</string>
    <string name="pontos_partida_dois">50 pontos</string>
    <string name="pontos_partida_tres">20 pontos</string>
    <string name="pontos_partida_quatro">20 pontos</string>
    <string name="pontos_partida_cinco">20 pontos</string>
    <string name="pontos_partida_seis">50 pontos</string>
    <string name="pontos_partida_sete">100 pontos</string>
    //segundo jogador
    <string name="pontos_partida_oito">100 pontos</string>
    <string name="pontos_partida_nove">50 pontos</string>
    <string name="pontos_partida_dez">100 pontos</string>
    <string name="pontos_partida_onze">100 pontos</string>
    <string name="pontos_partida_doze">100 pontos</string>
    <string name="pontos_partida_treze">50 pontos</string>
    <string name="pontos_partida_catorze">20 pontos</string>
    <string name="descricao_barra_resultado">Resultados das ultimas partidas</string>
    <string name="descricao_cor_jog_um">Cor escolhida de acordo com o personagem selecionado</string>
    <string name="descricao_cor_jog_dois">Cor escolhida de acordo com o personagem selecionado</string>

    //Como Jogar
    <string name="tutorial">Como jogar: </string>
    <string name="topico_um_tutorial">• Antes de iniciar o jogo, afaste o máximo possível do seu adversário;</string>
    <string name="topico_dois_tutorial">• Aperte o botão para atirar;</string>
    <string name="topico_tres_tutorial">• Mire no colete para causar dano;</string>
    <string name="topico_quatro_tutorial">• Vence quem sobreviver.</string>

    //Trocar Personagem
    <string name="personagens">Personagens</string>
    <string name="confirma_personagem">Confirme o personagem</string>
    <string name="heroi1">Detonador</string>
    <string name="heroi2">Mago</string>
    <string name="heroi3">Nebulosa</string>
    <string name="heroi4">Sniper</string>
    <string name="heroi5">Valente</string>
    <string name="descricao_heroi1"> O Detonador com sua resistência maior aos tiros pode durar mais no campo de batalha.</string>
    <string name="descricao_heroi2">O Mago com seus poderes ele pode eliminar qualquer jogador em segundos.</string>
    <string name="descricao_heroi3">Não se iluda com a Nebulosa, ela é incrivelmente resistente aos tiros dos outros jogadores. </string>
    <string name="descricao_heroi4">Com agilidade e precisão no gatilho, o Sniper atinge o outro jogador de forma rápida. </string>
    <string name="descricao_heroi5">O Valente com a sua incrível força, pode causar dano ate no jogador mais experiente. </string>
    <string name="descricao_card">Cards que irão conter as informaçoes dos personagens</string>
    <string name="vida_hab">Vida</string>
    <string name="cura_hab">Cura</string>
    <string name="dano_hab">Dano</string>

    //Conectar no Bluetooth
    <string name="bluetooth">Simbolo bluetooth.</string>
    <string name="traje">Selecione o código do seu traje, herói: </string>
    <string name="bluetooth_traje_um">Traje 2DG-59</string>
    <string name="bluetooth_traje_dois">Traje 5DH-60</string>

    //Conectando no Jogo (30s)
    <string name="tempo">30</string>
    <string name="tempo2">s</string>
    <string name="topico_um_inicio_jogo">• Afaste-se do seu adversário;</string>
    <string name="topico_dois_inicio_jogo">• Aperte o botão para atirar;</string>
    <string name="topico_tres_inicio_jogo">• Mire no colete;</string>
    <string name="topico_quatro_inicio_jogo">• Vence quem sobreviver.</string>


    //Batalha
    <string name="vida">Vida atual: </string>
    <string name="perdi">Perdi </string>
    <string name="ganhei">Ganhei </string>


    //Pausar

    //Desistir
    <string name="derrota">Não foi dessa vez.</string>
    <string name="pontos">0</string>
    <string name="descricao_sad">Imagem triste</string>

    //Ganhar Partida
    <string name="vitoria">Vencedor</string>
    <string name="pontos_dois">+100</string>

    //
    <string name="campo_nome">nome</string>
    <string name="nome_campo">name</string>

    //Tela Sala
    <string name="sala">Zona de batalha</string>
    <string name="codigo">Digite o código de batalha</string>
    <string name="codigo1">Este é seu código de batalha</string>
    <string name="botao_start">Jogar</string>
    <string name="botao_gerar_codigo">Gerar código</string>

    //Tela inimigos
    <string name="jogar">Jogar</string>


</resources>

