<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home"
    tools:context=".decima_pagina">

    <ImageView
        android:id="@+id/imageView19"
        android:layout_width="163dp"
        android:layout_height="219dp"
        android:layout_marginStart="32dp"
        android:contentDescription="@string/personagem"
        android:onClick="Click3"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView39"
        app:srcCompat="@drawable/mago" />

    <ImageButton
        android:id="@+id/imageButton8"
        android:layout_width="291dp"
        android:layout_height="86dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="@string/descricao_batalha"
        android:onClick="Click"
        android:scaleType="centerCrop"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView42"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/bot3" />

    <TextView
        android:id="@+id/textView38"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lalezar"
        android:shadowColor="#707070"
        android:shadowDx="5"
        android:shadowDy="5"

        android:shadowRadius="10"
        android:text="@string/batalha"
        android:textColor="@android:color/white"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageButton8"
        app:layout_constraintEnd_toEndOf="@+id/imageButton8"
        app:layout_constraintStart_toStartOf="@+id/imageButton8"
        app:layout_constraintTop_toTopOf="@+id/imageButton8" />

    <ImageButton
        android:id="@+id/imageButton10"
        android:layout_width="34dp"
        android:layout_height="33dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="8dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/descricao_info"
        android:onClick="Click1"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/imageButton11"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.011"
        app:srcCompat="@drawable/info" />

    <TextView
        android:id="@+id/textView39"
        android:layout_width="wrap_content"
        android:layout_height="51dp"
        android:fontFamily="@font/lalezar"
        android:text="@string/personagem"
        android:textColor="@android:color/white"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView44" />

    <ImageButton
        android:id="@+id/imageButton11"
        android:layout_width="275dp"
        android:layout_height="89dp"
        android:layout_marginEnd="8dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/descricao_barra_nivel"
        android:onClick="Click2"
        android:scaleType="fitStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/nivel" />

    <TextView
        android:id="@+id/textView40"
        android:layout_width="179dp"
        android:layout_height="30dp"
        android:layout_marginStart="7dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="70dp"
        android:fontFamily="@font/lalezar"
        android:shadowColor="#707070"
        android:shadowDx="5"
        android:shadowDy="5"
        android:shadowRadius="10"
        android:text="@string/jogador"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageButton11"
        app:layout_constraintEnd_toEndOf="@+id/imageButton11"
        app:layout_constraintHorizontal_bias="0.275"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageButton11"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView41"
        android:layout_width="117dp"
        android:layout_height="63dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/lalezar"
        android:shadowColor="#707070"
        android:shadowDx="5"
        android:shadowDy="5"
        android:shadowRadius="10"
        android:text="@string/nivel"
        android:textColor="@android:color/white"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageButton11"
        app:layout_constraintEnd_toStartOf="@+id/imageButton12"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/imageButton11"
        app:layout_constraintTop_toBottomOf="@+id/textView40"
        app:layout_constraintVertical_bias="0.636" />

    <ImageButton
        android:id="@+id/imageButton12"
        android:layout_width="28dp"
        android:layout_height="36dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="112dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/descricao_estrela"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="@+id/imageButton11"
        app:layout_constraintEnd_toEndOf="@+id/imageButton11"
        app:layout_constraintTop_toTopOf="@+id/imageButton11"
        app:layout_constraintVertical_bias="0.488"
        app:srcCompat="@drawable/estrela" />

    <TextView
        android:id="@+id/textView42"
        android:layout_width="wrap_content"
        android:layout_height="31dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/lalezar"
        android:onClick="Click3"
        android:text="@string/trocar"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView19" />

    <TextView
        android:id="@+id/textView43"
        android:layout_width="wrap_content"
        android:layout_height="29dp"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/lalezar"
        android:text="@string/pontuacao"
        android:textColor="@color/colorAzul"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/imageButton11"
        app:layout_constraintTop_toBottomOf="@+id/imageButton11" />

    <TextView
        android:id="@+id/textView44"
        android:layout_width="wrap_content"
        android:layout_height="31dp"
        android:layout_marginEnd="130dp"
        android:fontFamily="@font/lalezar"
        android:text="@string/pontos_tres"
        android:textColor="@color/colorAzul"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/imageButton11"
        app:layout_constraintStart_toEndOf="@+id/textView43"
        app:layout_constraintTop_toBottomOf="@+id/imageButton11" />
</android.support.constraint.ConstraintLayout>